haskell-filepath (1.1.0.2-1) UNRELEASED; urgency=low

  [ Marco Túlio Gontijo e Silva ]
  * debian/control: Use Debian Haskell Group as Maintainer.

  [ Joachim Breitner ]
  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Wed, 18 Nov 2009 14:27:51 +0100

haskell-filepath (1.1.0.1-1) experimental; urgency=low

  * New upstream release
  * Remove linda override file. Linda is removed from the archive.
  * debian/control:
    - Bump Standards-Version: no changes needed.
    - Drop build dependency on dpatch because there are no patches.

 -- Arjan Oosting <arjan@debian.org>  Sat, 17 Jan 2009 19:09:14 +0100

haskell-filepath (1.1.0.0-1) unstable; urgency=low

  * New upstream release.
  * debian/watch: Updated as latest releases are release on HackageDB.

 -- Arjan Oosting <arjan@debian.org>  Sun, 13 Jan 2008 02:25:44 +0100

haskell-filepath (1.0-4) unstable; urgency=low

  * debian/control:
    - Add new Homepage field.
    - Replace XS-Vcs-* with new official Vcs-* fields.
    - Bump the Standards-Version to 3.7.3. No Changes needed.
  * debian/rules:
    - Add --no-package=haskell-filepath-doc to the dh_haskell call to stop
      the new haskell-devscripts from generating haddock documentation.

 -- Arjan Oosting <arjan@debian.org>  Sun, 30 Dec 2007 20:37:05 +0100

haskell-filepath (1.0-3) unstable; urgency=low

  * debian/control:
    - Update XS-Vcs-* fields as the packages has moved to the pkg-haskell
      subversion archive.
  * Stop building packages for GHC 6 as it ships filepath now:
    - debian/control:
      + Drop libghc6-filepath-dev, libghc6-filepath-prof as ghc6 and
        ghc6-prof provide these packages now.
      + Make haskell-filepath-doc an dummy package which depends on
        libghc6-filepath-doc.
      + Drop dctrl-tools, ghc6-prof and haddock from the build
        dependencies.
    - debian/haskell-filepath-doc.{dirs,doc-base,docs}: removed.
    - debian/mk-haskell-depends: removed.
    - debian/rules: