@@ -1,22 +1,23 @@
 Source: haskell-filepath
-Section: devel
+Section: haskell
 Priority: extra
 Maintainer: Debian Haskell Group <pkg-haskell-maintainers@lists.alioth.debian.org>
 Build-Depends:
+	cdbs,
+	haskell-devscripts (>= 0.6.18),
+	ghc6 (>= 6.10.4),
 	cpphs,
 	dpkg-dev (>= 1.13.19),
-	debhelper (>= 5.0.0),
-	ghc6 (>= 6.6),
-	haskell-devscripts (>= 0.5.14)
+	debhelper (>= 7),
 Build-Depends-Indep: hugs
-Standards-Version: 3.8.0
+Standards-Version: 3.8.3
 Vcs-Darcs: http://darcs.debian.org/pkg-haskell/haskell-filepath/
 Homepage: http://www-users.cs.york.ac.uk/~ndm/projects/libraries.php#filepath
 
 Package: libhugs-filepath
 Architecture: all
 Depends: ${haskell:Depends}
-Suggests: haskell-filepath-doc (= ${source:Version})
+Suggests: libghc6-filepath-doc
 Description: Hugs library for manipulating FilePath's
  A library for FilePath manipulations, designed to be cross
  platform. This library will select the correct type of FilePath's for
