@@ -1,2 +1,4 @@
+# See uscan(1) for format
+
 version=3
-http://hackage.haskell.org/cgi-bin/hackage-scripts/package/filepath /packages/archive/filepath/.*/filepath-([\d\.]*)\.tar\.gz
+http://hackage.haskell.org/packages/archive/filepath/([\d.]+)/filepath-([\d.]+).tar.gz
