@@ -5,6 +5,7 @@ haskell-filepath (1.1.0.2-1) UNRELEASED; urgency=low
 
   [ Joachim Breitner ]
   * New upstream release
+  * Change packaging to use hlibrary.mk (Closes: #556835)
 
  -- Joachim Breitner <nomeata@debian.org>  Wed, 18 Nov 2009 14:27:51 +0100
 
